--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -9,8 +9,8 @@
 \@ifundefined{ownLineNoSpacesGotIt}{
 \@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \@backslashchar usepackage{exbank}}
 }{}
-%:\!begin{marker}DEPRECATED! use \refCom{exercisebanksetup} with \refKey{exercise directory} instead!\!end{marker}
 %:=\setExercisesDir{directory}
+%:\!begin{marker}\setExercisesDir is deprecated! use \refCom{exercisebanksetup} with \refKey{exercise directory} instead!\!end{marker}
 %:This is the directory, relative to the file you included the package,
 %:where the package should be looking for exercises. Default is the same directory as your main file (the one you build).
 %:-
