Updated to CTAN

--- a/docs/exercisebank-doc.tex
+++ b/docs/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v0.1.0-betab53 - 2018/04/06
-%% The LaTeX package exercisebank - version v0.1.0-beta (2018/04/06) build 53
+%% exercisebank v0.1.0b55 - 2018/04/08
+%% The LaTeX package exercisebank - version v0.1.0 (2018/04/08) build 55
 %% #PACKAGE.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -41,7 +41,7 @@
       \path[fill=yellow!50!black,draw=none] (interior.south west) rectangle node[white]{\Huge\bfseries !} ([xshift=4mm]interior.north west);
       },
     drop fuzzy shadow,#1}
- \title{Exercise bank - Manual\\{\normalsize v0.1.0-beta}}
+ \title{Exercise bank - Manual\\{\normalsize v0.1.0}}
  \makeatother
 \let\dac\docAuxCommand
 \long\def\keyDef#1#2#3#4{\begin{docKey}{#1}{=\meta{#2}}{\meta{default}=#3}#4\end{docKey}}
@@ -57,12 +57,13 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{exercisebank - manual\\ v0.1.0-beta{\\[-0.5em]\footnotesize(build 53)}}}
+\title{{exercisebank - manual\\ v0.1.0{\\[-0.5em]\footnotesize(build 55)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
  
-If you found any bugs or want new functionality, to contribute, view the commented source, get latest version of this package or get in touch with me, you can do all of that at \url{https://github.com/Strauman/exerciseBank/}
+If you found any bugs or want new functionality, to contribute, view the commented source, get latest version of this package or get in touch with me, you can do all of that at \url{https://github.com/Strauman/exerciseBank/}. If you have questions of functionality, kindly direct them to the community\\ \url{http://tex.stackexchange.com}. The author is active on this site regularly.
+
 \tableofcontents
 \clearpage
 \section{Motivation}
@@ -364,8 +365,8 @@ Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.
   v0.0.5b46&2018/04/03&\begin{itemize}
     \item Fixed partproblems and solutions to fit on pages using \dac{filbreak}.
   \end{itemize}\\
-  v0.1.0-beta&2018/04/06&\begin{itemize}
-    \item \begin{marker}Backward incompability from v0.0.5:Removed default exercise directory! \end{marker} Use \dac{exercisebanksetup}\brackets{exercise directory=exercises} if you used the package before 2018/04/06!
+  v0.1.0&2018/04/08&\begin{itemize}
+    \item \begin{marker}Backward incompability from v0.0.5:Removed default exercise directory! \end{marker} Use \dac{exercisebanksetup}\brackets{exercise directory=exercises} if you used the package before 2018/04/08!
     \item Fixed title of documentation to match actual package.
     \item Fixed weird paragraph styling when displaying solutions
     \item Added a few package options. More to come!
