--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -16,8 +16,8 @@
   v0.0.5b46&2018/04/03&\begin{itemize}
     \item Fixed partproblems and solutions to fit on pages using \dac{filbreak}.
   \end{itemize}\\
-  @@VERSION&@@DATE&\begin{itemize}
-    \item \begin{marker}Backward incompability from v0.0.5:Removed default exercise directory! \end{marker} Use \dac{exercisebanksetup}\brackets{exercise directory=exercises} if you used the package before @@DATE!
+  v0.1.0&2018/04/08&\begin{itemize}
+    \item \begin{marker}Backward incompability from v0.0.5:Removed default exercise directory! \end{marker} Use \dac{exercisebanksetup}\brackets{exercise directory=exercises} if you used the package before 2018/04/08!
     \item Fixed title of documentation to match actual package.
     \item Fixed weird paragraph styling when displaying solutions
     \item Added a few package options. More to come!
