--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -22,4 +22,8 @@
     \item Fixed weird paragraph styling when displaying solutions
     \item Added a few package options. More to come!
   \end{itemize}\\
+  @@VERSION&@@DATE&\begin{itemize}
+    \item Added \dac{exec}
+    \item Fixed bug where \dac{At} would cause crash due to latexmk multiple builds
+  \end{itemize}\\
 \end{tabularx}
